# how-query-engines-work

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.fake  Cargo.toml  Dockerfile  README.md  build-docker-image.sh  build.gradle.kts  build.rs  build.sh  gradle.properties  rust-toolchain  settings.gradle.kts
.circleci/: config.yml
benchmarks/: .gitignore  Cargo.toml  README.md  build.gradle.kts  run-csv.sh  run.sh
benchmarks/tpch/: Cargo.toml  README.md  docker-compose.yaml  run.sh  tpch-gen.sh
benchmarks/tpch/src/: main.rs
datasource/: build.gradle.kts
dev/: build-all.sh  build-docker-images.sh  build-jvm.sh  build-rust-base-images.sh  build-rust-base.sh  build-rust-benchmarks.sh  build-rust-cached-deps.sh  build-rust.sh  build-spark.sh  bump-version.sh  download-nyctaxi-files.sh  publish-docker-images.sh  publish-jvm.sh  publish-rust.sh  split-csv.sh  tag-docker-images.sh
docker/: Dockerfile.binary  Dockerfile.platform  README.md  jvm-benchmarks.dockerfile  jvm-executor.dockerfile  rust-base.dockerfile  rust-benchmarks.dockerfile  rust-cached-deps.dockerfile  rust-executor.dockerfile  rust.dockerfile  spark-benchmarks.dockerfile  spark-executor.dockerfile
docs/: README.md  dev-env-jvm.md  dev-env-rust.md  development-environment.md  development-guide.md  functionality.md  integration-testing.md  nyctaxi.md  release-process.md  rust-docker.md  testing-rust-executor.md  tpch.md
examples/: build.gradle.kts  client.rs  example1.rs  nyctaxi.rs
examples/nyctaxi/: Cargo.toml  Dockerfile  README.md  build-docker-image.sh
examples/nyctaxi/src/: main.rs
examples/nyctaxi/templates/: application.yaml  executor.yaml  pv.yaml  pvc.yaml
examples/parallel-aggregate-rs/: Cargo.toml  Dockerfile  README.md  build-docker-image.sh  cluster-deployment.yaml  download-nyctaxi-files.sh  example-deployment.yaml  parallel-aggregate-rs.yaml
examples/parallel-aggregate-rs/src/: main.rs
execution/: build.gradle.kts
executor/: build.gradle.kts
flight-server/: build.gradle.kts
fuzzer/: build.gradle.kts
integration-tests/: README.md  docker-compose.yml  run.sh
integration-tests/rust/: Cargo.toml
integration-tests/rust/src/: main.rs
java/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
jvm/: CONTRIBUTING.md  README.md  build.gradle.kts  settings.gradle.kts
kubernetes/: README.md  ballista-cluster-jvm.yaml  ballista-cluster-rust.yaml  ballista-cluster-spark.yaml  ballista-cluster.yaml  populate-data.yaml  pv.yaml  rbac.yaml
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker-image.sh  build.rs
rust/ballista/: Cargo.toml  README.md  build.rs
rust/ballista-old/: Cargo.toml  build.rs
rust/ballista-old/src/: dataframe.rs  error.rs  lib.rs
rust/ballista-old/src/distributed/: etcd.rs  flight_service.rs  k8s.rs
rust/ballista-old/src/execution/: mod.rs
rust/ballista-old/src/execution/expressions/: alias.rs  arithmetic.rs  max.rs  min.rs  mod.rs
rust/ballista-old/src/execution/operators/: filter.rs  hash_aggregate.rs  in_memory.rs  parquet_scan.rs  shuffle_reader.rs
rust/ballista-old/src/serde/: from_proto.rs  mod.rs  to_proto.rs
rust/ballista-old/src/utils/: datagen.rs  mod.rs
rust/ballista-old/tests/: query_execution.rs
rust/ballista-proto/: Cargo.toml
rust/ballista-proto/proto/: ballista.proto
rust/ballista-proto/src/: from_proto.rs  lib.rs  to_proto.rs
rust/ballista-proto/src/physical_plan/: mod.rs  to_proto.rs
rust/ballista/benches/: hash_agg.rs
rust/ballista/examples/: client.rs
rust/ballista/proto/: ballista.proto
rust/ballista/src/: client.rs  cluster.rs  columnar_batch.rs  context.rs  dataframe.rs  error.rs  etcd.rs  execution_plan.rs  executor.rs  flight_service.rs  k8s.rs  lib.rs  logical_plan.rs  logicalplan.rs  memory_stream.rs  physical_plan.rs  plan.rs  prelude.rs  query_stage.rs  scheduler.rs  shuffle_hash_join.rs  shuffle_write.rs  utils.rs
rust/ballista/src/distributed/: client.rs  context.rs  etcd.rs  executor.rs  flight_service.rs  k8s.rs  localmode.rs  mod.rs  scheduler.rs
rust/ballista/src/execution/: filter.rs  hash_aggregate.rs  mod.rs  parquet_scan.rs  physical_plan.rs  projection.rs  scheduler.rs  shuffle_exchange.rs  shuffle_reader.rs  shuffled_hash_join.rs
rust/ballista/src/execution/expressions/: aggregate.rs  alias.rs  arithmetic.rs  avg.rs  column.rs  comparison.rs  count.rs  literal.rs  max.rs  min.rs  mod.rs  simple.rs  simple_expressions.rs  sum.rs
rust/ballista/src/execution/operators/: csv_scan.rs  filter.rs  hash_aggregate.rs  in_memory.rs  mod.rs  parquet_scan.rs  projection.rs  shuffle_exchange.rs  shuffle_reader.rs  shuffled_hash_join.rs
rust/ballista/src/serde/: from_proto.rs  mod.rs  to_proto.rs
rust/ballista/src/serde/logical_plan/: from_proto.rs  mod.rs  to_proto.rs
rust/ballista/src/serde/physical_plan/: from_proto.rs  to_proto.rs
rust/ballista/src/serde/scheduler/: from_proto.rs  mod.rs  to_proto.rs
rust/ballista/src/utils/: datagen.rs  macros.rs  mod.rs  pretty.rs
rust/ballista/tests/: local_mode.rs  query_execution.rs
rust/benchmarks/: Cargo.toml  README.md  benchmarks.yaml  run-dockerized.sh  run-native.sh
rust/benchmarks/src/: main.rs
rust/examples/: do-get.rs  get-flight-info.rs  get-schema.rs  send-logical-plan.rs
rust/examples/apache-spark-rust-bindings/: Cargo.toml  README.md  main.rs
rust/examples/apache-spark-rust-bindings/src/: main.rs
rust/examples/distributed-query/: Cargo.toml  README.md  ballista-cluster.yaml
rust/examples/distributed-query/src/: main.rs
rust/examples/parallel-aggregate/: Cargo.toml  Dockerfile  README.md  build-docker-image.sh  cluster-deployment.yaml  main.rs  parallel-aggregate-rs.yaml  pv.yaml
rust/examples/parallel-aggregate/src/: main.rs
rust/examples/tpch/: Cargo.toml  README.md  docker-compose.yaml
rust/examples/tpch/src/: main.rs
rust/src/: client.rs  cluster.rs  dataframe.rs  dfcontext.rs  error.rs  lib.rs  logical_plan.rs  logicalplan.rs  plan.rs  serde.rs  utils.rs
rust/src/serde/: from_proto.rs  mod.rs  to_proto.rs
(+409 files in other folders)
