[package]
name = "ballista"
description = "Modern distributed compute platform based on Rust, Apache Arrow, and Kubernetes"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://github.com/andygrove/ballista"
repository = "https://github.com/andygrove/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-hyper = "0.1"
hyper = "0.12"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { path = "../tower-grpc/tower-grpc", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"
arrow = { path = "../arrow/rust/arrow" }
datafusion = { path = "../arrow/rust/datafusion" }

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc/tower-grpc-build", features = ["tower-hyper"] }