[package]
name = "ballista"
description = "Modern distributed compute platform based on Apache Arrow and Kubernetes"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://github.com/andygrove/ballista"
repository = "https://github.com/andygrove/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "ballista-server"
path = "src/bin/server.rs"

[[bin]]
name = "ballista"
path = "src/bin/cli.rs"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-hyper = "0.1"
hyper = "0.12"
tower-service = "0.2"
tower-grpc = { version = "0.1.0", features = ["tower-hyper"] }
tower-util = "0.1"
k8s-openapi = { version = "0.4.0", features = ["v1_13"] }
reqwest = "0.9.18"
clap = "2.33.0"

# TODO figure out how to use released version
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }

# Arrow 0.13 doesn't compile with latest nightly Rust so have to do this until 0.14 is released
arrow = { git = "https://github.com/apache/arrow" }
datafusion = { git = "https://github.com/apache/arrow" }

[build-dependencies]
tower-grpc-build = { version = "0.1.0", features = ["tower-hyper"] }