[package]
name = "ballista"
description = "Distributed compute platform based on Apache Arrow and Kubernetes"
license = "Apache-2.0"
version = "0.2.0-alpha-1"
homepage = "https://github.com/ballista-compute/ballista"
repository = "https://github.com/ballista-compute/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
env_logger = { version = "0.6", default-features = false }
futures = "0.3"
http = "0.1"
k8s-openapi = { version = "0.4.0", features = ["v1_13"] }
kube = "0.14"
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.1"
flatbuffers = "0.6.0"
prost = "0.6"
prost-types = "0.6"
reqwest = "0.9.18"

arrow = { git = "https://github.com/andygrove/arrow", rev = "eb0dd86893307277ff6a48d96098bad16b636f94" }
arrow-flight = { git = "https://github.com/andygrove/arrow", rev = "eb0dd86893307277ff6a48d96098bad16b636f94" }
datafusion = { git = "https://github.com/andygrove/arrow", rev = "eb0dd86893307277ff6a48d96098bad16b636f94" }

[[bin]]
name = "executor"
path = "src/bin/executor.rs"

[build-dependencies]
prost-build = { version = "0.6.1" }
