[package]
name = "tpch"
version = "0.4.0-SNAPSHOT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
ballista = { path="../../rust/ballista" }

arrow = { git = "https://github.com/apache/arrow", rev="d613aa6" }
arrow-flight = { git = "https://github.com/apache/arrow", rev="d613aa6" }
datafusion = { git = "https://github.com/apache/arrow", rev="d613aa6" }
parquet = { git = "https://github.com/apache/arrow", rev="d613aa6" }

env_logger = "0.8"
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3"
