[package]
name = "ballista-nyctaxi"
description = "Ballista example for NYC Taxi data"
version = "0.1.2"
license = "Apache-2.0"
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/andygrove/arrow", branch = "ARROW-5945" }
datafusion = { git = "https://github.com/andygrove/arrow", branch = "ARROW-5945" }
ballista = { path = "../../" }
