[package]
name = "ballista-nyctaxi"
description = "Ballista example for NYC Taxi data"
version = "0.1.3"
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = { version = "0.6", default-features = false }

arrow = { git = "https://github.com/apache/arrow" }
datafusion = { git = "https://github.com/apache/arrow" }

ballista = { path = "../../" }
