[package]
name = "parallel-aggregate"
version = "0.2.0-dev"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.1"

ballista = { path = "../../rust" }

arrow = { git = "https://github.com/andygrove/arrow", rev = "eb0dd86893307277ff6a48d96098bad16b636f94" }
arrow-flight = { git = "https://github.com/andygrove/arrow", rev = "eb0dd86893307277ff6a48d96098bad16b636f94" }
datafusion = { git = "https://github.com/andygrove/arrow", rev = "eb0dd86893307277ff6a48d96098bad16b636f94" }


