[package]
name = "ballista-integration-tests"
version = "0.2.5-SNAPSHOT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
ballista = { path = "../../rust/ballista" }

arrow = "0.17"
arrow-flight = "0.17"
datafusion = "0.17"

tokio = { version = "0.2", features = ["full"] }
