[package]
name = "ballista-integration-tests"
version = "0.4.0-SNAPSHOT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/apache/arrow", rev="49a1c7b" }
arrow-flight = { git = "https://github.com/apache/arrow", rev="49a1c7b" }
datafusion = { git = "https://github.com/apache/arrow", rev="49a1c7b" }
ballista = { path = "../../rust/ballista" }

tokio = { version = "0.2", features = ["full"] }
