[package]
name = "ballista-integration-tests"
version = "0.4.0-SNAPSHOT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/apache/arrow", rev="d613aa6" }
arrow-flight = { git = "https://github.com/apache/arrow", rev="d613aa6" }
datafusion = { git = "https://github.com/apache/arrow", rev="d613aa6" }
ballista = { path = "../../rust/ballista" }

tokio = { version = "0.2", features = ["full"] }
