[package]
name = "ballista-proto"
description = "Ballista Protocol Buffer Definitions"
license = "Apache-2.0"
version = "0.2.0-SNAPSHOT"
homepage = "https://github.com/ballista-compute/ballista"
repository = "https://github.com/ballista-compute/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"
include = ["build.rs", "src/**/*", "Cargo.toml", "proto/ballista.proto"]

[dependencies]
prost = "0.6"
prost-types = "0.6"

#arrow = { git = "https://github.com/apache/arrow", rev="1f32ca1" }
#datafusion = { git = "https://github.com/apache/arrow", rev="1f32ca1" }

arrow = { git = "https://github.com/andygrove/arrow", branch="physical-plan-accessor-methods" }
datafusion = { git = "https://github.com/andygrove/arrow", branch="physical-plan-accessor-methods" }


[build-dependencies]
prost-build = { version = "0.6.1" }