[package]
name = "ballista"
description = "Ballista Distributed Compute"
license = "Apache-2.0"
version = "0.4.0-SNAPSHOT"
homepage = "https://github.com/ballista-compute/ballista"
repository = "https://github.com/ballista-compute/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"
include = ["build.rs", "src/**/*", "Cargo.toml", "proto/ballista.proto"]

[dependencies]
prost = "0.6"
prost-types = "0.6"
sqlparser = "0.7"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2"

arrow = { git = "https://github.com/apache/arrow", rev="49a1c7b" }
datafusion = { git = "https://github.com/apache/arrow", rev="49a1c7b" }

[build-dependencies]
prost-build = { version = "0.6.1" }

[[bin]]
name = "executor"
path = "src/bin/executor.rs"