[package]
name = "ballista"
description = "Ballista Distributed Compute"
license = "Apache-2.0"
version = "0.4.0-SNAPSHOT"
homepage = "https://github.com/ballista-compute/ballista"
repository = "https://github.com/ballista-compute/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"
include = ["build.rs", "src/**/*", "Cargo.toml", "proto/ballista.proto"]

[features]
simd = ["datafusion/simd"]
snmalloc = ["snmalloc-rs"]

[dependencies]
async-trait = "0.1.36"
clap = "2"
crossbeam = "0.7"
env_logger = "0.8"
etcd-client = "0.5"
futures = "0.3"
k8s-openapi = { version = "0.8.0", features = ["v1_13"] }
kube = "0.35"
log = "0.4"
prost = "0.6"
prost-types = "0.6"
sqlparser = "0.7"
snmalloc-rs = {version = "0.2", features= ["cache-friendly"], optional = true}
structopt = "0.3"
tempfile = "3"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

arrow = "3.0.0"
arrow-flight = "3.0.0"
datafusion = "3.0.0"

[dev-dependencies]

[build-dependencies]
prost-build = { version = "0.6.1" }

[[bin]]
name = "executor"
path = "src/bin/executor.rs"
